Minor fixes for participants spacing

--- a/styles.css
+++ b/styles.css
@@ -22,17 +22,22 @@ h1 {
   
 
   .itemInfo {
-    height: 20%;
+    height: 15%;
   }
 
   .participant_list {
-    height: 80%;
+    height: 85%;
   }
   
   .participant_list {
     margin-top: 100px;
     margin-left: 4%;
     margin-right: 10%;
+  }
+
+  .participant_list h3 
+  {
+    margin-bottom: 10px;
   }
 
   .participant {
